--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
-bin
-tmp
+*.test
+*.out
+go.work
+
+/bin/
+/tmp/
+/obj/
+
+.idea
 .vscode/*
 !.vscode/extensions.json
+
+.vgcore.*
+*.log
+*.local
+*.o
+*.a
+*.su
